add gulp endpoint
